Implementation of providers (first try).

--- a/dicoogle/src/main/java/pt/ua/dicoogle/server/web/webapp/WEB-INF/index-template.html
+++ b/dicoogle/src/main/java/pt/ua/dicoogle/server/web/webapp/WEB-INF/index-template.html
@@ -15,20 +15,20 @@
     <!-- Custom styles for this template -->
     <!-- <link href="css/theme.css" rel="stylesheet"> -->
 
-
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
+    <link href='css/vendors/fonts-googleapi.css' rel='stylesheet' type='text/css'>
 
       <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/loaders.min.css" rel="stylesheet">
 
 
-    <link href="//cdn.datatables.net/plug-ins/1.10.6/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="lib/datatables/dataTables.bootstrap.css" rel="stylesheet">
 
-    <link href="//cdn.datatables.net/responsive/1.0.6/css/dataTables.responsive.css" rel="stylesheet">
+    <link href="lib/datatables/dataTables.responsive.css" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.css">
 
     <link href="lib/multiselect/multi-select.css" media="screen" rel="stylesheet" type="text/css">
 
