--- a/dicoogle/src/main/java/pt/ua/dicoogle/server/web/webapp/WEB-INF/index.html
+++ b/dicoogle/src/main/java/pt/ua/dicoogle/server/web/webapp/WEB-INF/index.html
@@ -16,19 +16,21 @@
     <!-- <link href="css/theme.css" rel="stylesheet"> -->
 
 
-    <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='css/vendors/fonts-googleapi.css' rel='stylesheet' type='text/css'>
 
-      <!-- Custom CSS -->
+
+    <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <link href="css/loaders.min.css" rel="stylesheet">
 
 
-    <link href="//cdn.datatables.net/plug-ins/1.10.6/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="lib/datatables/dataTables.bootstrap.css" rel="stylesheet">
 
-    <link href="//cdn.datatables.net/responsive/1.0.6/css/dataTables.responsive.css" rel="stylesheet">
+    <link href="lib/datatables/dataTables.responsive.css" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.css">
+
 
     <link href="lib/multiselect/multi-select.css" media="screen" rel="stylesheet" type="text/css">
 
@@ -79,7 +81,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-<script src="js/bundle.min.js"></script>
+     
+<!-- minified version should  load only for production enviroment -->
+<script src="js/bundle.js"></script>
 
 <!--<script src="lib/magnificient/jquery-ui.min.js"></script>-->
 <!--
